tests/snapshots/run_wpt_conformance__coreml_lesser_float32_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser.https.any.js lesser float32 broadcast 3D to 4D, coreml
 lesser :: lesser float32 broadcast 3D to 4D: index 1: actual=0 expected=1 tolerance=0
  inputs: inputA: [-1.147218942642212, -8.409374237060547, -2.2753310203552246, -0.5770801305770874, 8.171789169311523, -0.907120943069458, 5.2908453941345215, -3.9134645462036137, 9.825095176696776, -8.931730270385742, -3.457401752471924, -7.331232070922852, 1.232004165649414, 4.312077045440674, 1.2715545892715454, 4.184540748596191, -6.710920333862305, 3.0768423080444336, 1.0030865669250488, -9.076244354248049, 8.907161712646484, 4.232614994049072, 2.1005890369415283, -6.201345443725586]; inputB: [-4.439523696899414, 2.7518322467803955, 3.635943651199341, -2.8089921474456787]
  expected output: [0, 1, 0, 1, 0, 1, 0, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 128, 63, 0, 0 ...] (len=24)
  expected output full nd:
[0, 1, 0, 1, 0, 1, 0, 1, 0, 1, ...] (len=24, shape=[2, 2, 2, 3])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2, 2, 3];
    inputB: f32[2, 2, 1];
  }

  nodes {
    [output] = lesser(inputA, inputB, label="");
  }

  outputs { output; }
}
